[tool.poetry]
name = "biblioteca"
version = "0.1.0"
description = "API REST para um sistema de biblioteca usando Flask"
authors = ["SilasAlvesTi <silas.ifce.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
tinydb = "^4.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flask-pydantic-spec = "^0.3.1"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
